syntax = "proto3";

package sec07;

import "google/protobuf/empty.proto";

option java_package = "com.harshit.models.sec07";
option java_multiple_files = true;

/*
    Server emits 1-100 very fast.
    We want to control the rate in which server emits based on the client's processing speed (vice versa).
    This process is called back pressure handling/flow control.
 */


message Output{
    int32 value = 1;
}

message RequestSize{
    int32 size =1;
}

service FlowControlService{
    rpc GetMessages(stream RequestSize) returns (stream Output);
}

